--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/animation.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/animation.css
@@ -1,4 +1,36 @@
-@keyframes slideIn {
+.logo__svg {
+  position: relative;
+  animation-name: slideInLogo;
+  animation-duration: 2s;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-timing-function: ease;
+}
+
+.advantages-list__item-icon,  .advantages-list__item {
+  transition: transform .5s ease;
+}
+
+.advantages-list__item:hover {
+  transform: scale(1.3);
+}
+
+.advantages-list__item:hover .advantages-list__item-icon *:nth-child(1) {
+  stroke: #00A03E;
+}
+
+.gallery__image {
+  transition: transform .5s ease;
+  position: relative;
+}
+
+.gallery__image:hover {
+  transform: scale(1.1);
+  /*transition: transform .5s cubic-bezier();*/
+}
+
+@keyframes slideInLogo {
 
   0% {
     position: absolute;
@@ -19,25 +51,24 @@
   }
 }
 
-.logo__svg {
-  position: relative;
-  animation-name: slideIn;
-  animation-duration: 2s;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  animation-timing-function: ease;
-}
+@keyframes slideInImg {
 
-.advantages-list__item-icon,  .advantages-list__item {
-  transition: all .5s ease;
-}
+  0% {
+    position: relative;
+    left: 100%;
+    top: 35px;
+  }
 
-.advantages-list__item:hover {
-  transform: scale(1.3);
-}
+  75% {
+    position: relative;
+    left: 0;
+    top: 35px;
+  }
 
-.advantages-list__item:hover .advantages-list__item-icon *:nth-child(1) {
-  stroke: #00A03E;
+  100% {
+    position: relative;
+    left: 320px;
+    top: 35px;
+  }
 }
 
