--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/main-style.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/main-style.css
@@ -394,6 +394,23 @@ body {
   padding-right: 44px;
 }
 
+.nav-to-top-btn {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 60px;
+  height: 60px;
+  padding-bottom: 5px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  border: 5px solid var(--theme-brand-color);
+  color: #00A03E;
+  font-size: 25px;
+}
+
 @media only screen and (min-width: 585px) {
 
   .section-hero__banner {
