--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/animation.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/animation.css
@@ -74,7 +74,15 @@
 
 .nav-to-top-btn.active {
   opacity: 1;
-  transition: opacity 1s ease;
+  transition: opacity 1s ease, transform .5s ease;
+}
+
+.nav-to-top-btn:hover {
+  color: var(--theme-bg-color);
+  border-color: var(--theme-brand-color);
+  background: var(--theme-text-color);
+  cursor: pointer;
+  transform: scale(1.2);
 }
 
 button {
@@ -85,13 +93,48 @@ button {
 button:hover {
   box-shadow: 0 0 5px 5px var(--theme-brand-color);
   border: 1px solid #000;
-  transition: all 1s ease;
+  transition: box-shadow 1s ease, border 1s ease;
 }
 
-.list__item:hover {
-  border-radius: 25px;
-  color: var(--theme-brand-color);
-  background-color: var(--theme-text-color);
+.call-to-action-btn::before {
+  content: "\2193";
+  display: block;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  z-index: -1;
+  bottom: 45px;
+  left: 75px;
+  color: var(--theme-text-color);
+  font-size: 1px;
+  transition: bottom 1s ease, transform 1s ease;
+  animation-name: slideUp;
+  animation-duration: 2s;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-timing-function: ease-out;
+}
+
+.list__link::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background-color: var(--theme-brand-color);
+  transition: width 1s ease;
+}
+
+.list__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-flow: column;
+}
+
+.list__item:hover .list__link::after {
+  width: 100%;
 }
 
 
@@ -111,7 +154,7 @@ button:hover {
 
   0% {
     opacity: 0;
-    transform: translateX(-70%);
+    transform: translateX(70%);
   }
 
   100% {
@@ -133,3 +176,20 @@ button:hover {
   }
 }
 
+@keyframes slideUp {
+
+  0%,
+  50% {
+    font-size: 5px;
+    opacity: 1;
+  }
+
+  60% {
+    opacity: 1;
+    font-size: 37px;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
