--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/main-style.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/main-style.css
@@ -293,6 +293,7 @@ body {
 }
 
 .section-advantage__content {
+  position: relative;
   display: flex;
   justify-content: space-around;
   align-items: start;
@@ -348,6 +349,7 @@ body {
 }
 
 .section-resume__text {
+  position: relative;
   width: 551px;
   margin: 0;
   justify-content: center;
