--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -106,9 +106,26 @@ body {
 }
 
 .menu__link {
+  position: relative;
   text-decoration: none;
   cursor: pointer;
   color: var(--clr-n20);
+}
+
+.menu__link::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: var(--clr-n40);
+  left: 0;
+  bottom: -5px;
+  transform: scale(0);
+  transition: .5s;
+}
+
+.menu__link:hover::before {
+  transform: scale(1);
 }
 
 .menu__line:hover {
