--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -2,6 +2,7 @@ html {
   --clr-n40: #FD665E;
   --clr-n10: #FFF;
   --clr-n11: #FFF;
+  --clr-n17: #FF0;
   --grad: #F9F9F9;
   --clr-n20: #585858;
   --clr-n100: #000;
@@ -28,10 +29,40 @@ html {
 
 .themes-toggle__button--halfmoon {
   fill: var(--clr-n25);
+  animation-name: halfmoon;
+  animation-duration: 15s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes halfmoon {
+
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .themes-toggle__button--sun {
   fill: var(--clr-n100);
+  animation-name: sun;
+  animation-duration: 5s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+@keyframes sun {
+
+  from {
+    fill: var(--clr-n11);
+  }
+
+  to {
+    fill: var(--clr-n17);
+  }
 }
 
 .themes-toggle__button--hidden {
@@ -56,12 +87,29 @@ body {
   cursor: pointer;
 }
 
+@keyframes flash {
+
+  from {
+    background-color: var(--clr-n40);
+    color: var(--clr-n11)
+  }
+
+  to {
+    background-color: var(--clr-n10);
+    color: var(--clr-n40);
+  }
+}
+
 .button--primary {
   color: var(--clr-n11);
   background-color: var(--clr-n40);
   border-radius: 4px;
   font-weight: var(--fw-b);
   padding: 15px 24px;
+  animation-name: flash;
+  animation-duration: 8s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
 }
 
 .button--secondary {
@@ -162,12 +210,6 @@ body {
   margin-right: 45px;
   cursor: pointer;
   height: 25px;
-  transition: .2s;
-}
-
-.theme-toggle:hover {
-  transform: scale(1.2);
-  transition: .2s;
 }
 
 .dreamhouse__title {
