--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/style.css
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/style.css
@@ -106,6 +106,18 @@
   border-radius: 4px;
   height: 56px;
   max-width: 205px;
+  animation: button-hover-anim 3s cubic-bezier(.12, 0, .39, 0) infinite alternate;
+}
+
+@keyframes button-hover-anim {
+
+  0%, 50% {
+    transform: scale(1);
+  }
+
+  50%, 100% {
+    transform: scale(1.2);
+  }
 }
 
 .header {
@@ -163,6 +175,7 @@
   background: none;
   border: none;
   cursor: pointer;
+  animation: button-hover-anim 3s cubic-bezier(.12, 0, .39, 0) infinite alternate;
 }
 
 .header__sign-in {
@@ -173,6 +186,7 @@
   background: none;
   border: none;
   cursor: pointer;
+  animation: button-hover-anim 3s cubic-bezier(.12, 0, .39, 0) infinite alternate;
 }
 
 .header__sign-up {
