--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/style.css
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/style.css
@@ -59,19 +59,17 @@
 
 .advantages__two-svg {
   stroke: var(--text-and-advantages-svg-stroke-color);
-  animation: svg-anim 2s linear 1 alternate;
 }
 
 .advantages__one-svg,
 .advantages__three-svg {
   stroke: var(--text-and-advantages-svg-stroke-color);
-  animation: svg-anim 2s linear 1 alternate;
 }
 
 .header__logo-svg,
 .footer__logo-svg {
   fill: var(--button-color);
-  animation: svg-anim 2s linear 1 alternate;
+  animation: svg-logo-anim 2s linear 1 alternate;
 }
 
 .header__button-night-theme {
@@ -123,7 +121,7 @@
   }
 }
 
-@keyframes svg-anim {
+@keyframes svg-logo-anim {
 
   0%, 25% {
     transform: rotate(45deg);
@@ -197,7 +195,7 @@
   background: none;
   border: none;
   cursor: pointer;
-  animation: svg-anim 2s linear 1 alternate;
+  animation: button-hover-anim 3s cubic-bezier(.12, 0, .39, 0) infinite alternate;
 }
 
 .header__sign-in {
