--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/app.component.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/app.component.css
@@ -2,3 +2,11 @@
   margin: 0;
   padding: 0;
 }
+
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 30px;
+}
